layout inicial da página

--- a/index.html
+++ b/index.html
@@ -1,18 +1,73 @@
 <!doctype html>
-
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-
   <title>Bruno Souza</title>
   <meta name="description" content="Bruno Souza's Github Page">
   <meta name="author" content="Bruno Souza">
-
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
+  <!-- for FF, Chrome, Opera -->
+  <link rel="icon" type="image/png" href="img/ico.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="img/ico.png" sizes="32x32">
+
+  <!-- for IE -->
+  <link rel="icon" type="image/x-icon" href="img/ico.png">
+  <link rel="shortcut icon" type="image/x-icon" href="img/ico.png" />
 </head>
 
 <body>
   <script src="js/scripts.js"></script>
+  <div class="container">
+    <div class="profile">
+      <img src="img/me.jpg" alt="Bruno Souza" class="profile-picture">
+      <div class="profile-info">
+        <h1 class="author-name">bruno souza</h1>
+        <subtitle>desenvolvedor java & angular</subtitle>
+        <span class="icon-text">
+          são paulo, sp - brasil
+          <img src="img/location.png" alt="location link" class="icon-aligned">
+        </span>
+
+        <div class="contacts">
+          <a href="https://www.linkedin.com/in/hennriq/" target="_blank">
+            <img src="img/linkedin.png" alt="linkedin link" class="icon-link">
+          </a>
+          <a href="https://www.github.com/hennriq" target="_blank">
+            <img src="img/github.png" alt="github link" class="icon-link">
+          </a>
+          <a href="https://www.facebook.com/hennriq" target="_blank">
+            <img src="img/facebook.png" alt="facebook link" class="icon-link">
+          </a>
+          <a href="https://www.instagram.com/hennriq" target="_blank">
+            <img src="img/instagram.png" alt="instagram link" class="icon-link">
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="about-me">
+      <h2>olá, seja bem vindo ;)</h2>
+      <div class="projects">
+        <h3 class="icon-text">
+          projetos
+          <img src="img/projects.png" alt="projetos" class="icon-aligned">
+        </h3>
+      </div>
+      <div class="technologies">
+        <h3 class="icon-text">
+          tecnologias & interesses
+          <img src="img/technologies.png" alt="projetos" class="icon-aligned">
+        </h3>
+        <div class="technologies-logos">
+          <img src="img/java.png" alt="instagram link" class="logo">
+          <img src="img/angular.png" alt="instagram link" class="logo">
+          <img src="img/aws.png" alt="instagram link" class="logo">
+          <img src="img/net_core.png" alt="instagram link" class="logo">
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
