finalização github page

--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt">
 
 <head>
   <meta charset="utf-8">
   <title>Bruno Souza</title>
-  <meta name="description" content="Bruno Souza's Github Page">
+  <meta name="description" content="Bruno Souza - Github Page">
   <meta name="author" content="Bruno Souza">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
-
   <!-- for FF, Chrome, Opera -->
   <link rel="icon" type="image/png" href="img/ico.png" sizes="16x16">
   <link rel="icon" type="image/png" href="img/ico.png" sizes="32x32">
-
   <!-- for IE -->
   <link rel="icon" type="image/x-icon" href="img/ico.png">
   <link rel="shortcut icon" type="image/x-icon" href="img/ico.png" />
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
+  <script src="js/script.js"></script>
   <div class="container">
     <div class="profile">
       <img src="img/me.jpg" alt="Bruno Souza" class="profile-picture">
       <div class="profile-info">
-        <h1 class="author-name">bruno souza</h1>
+        <h1 class="author-name">Bruno Souza</h1>
         <subtitle>desenvolvedor java & angular</subtitle>
         <span class="icon-text">
           são paulo, sp - brasil
@@ -47,11 +46,83 @@
       </div>
     </div>
     <div class="about-me">
-      <h2>olá, seja bem vindo ;)</h2>
+      <h2 class="welcome">seja bem vindo ;)</h2>
       <div class="projects">
         <h3 class="icon-text">
           projetos
           <img src="img/projects.png" alt="projetos" class="icon-aligned">
+          <div class="professional">
+            <div class="experience">
+              <div class="company">
+                <img src="img/brq.jpg" alt="brq logo" class="icon-company">
+              </div>
+              <div class="description">
+                <h3><strong>Analista de Sistemas Sênior</strong></h3>
+                <p>BRQ Digital Solutions</p>
+
+                <p class="date-local">set. de 2019 – o momento</p>
+                <p class="date-local text-space-bottom">São Paulo e Região, Brasil</p>
+                
+                <p>Atuação como desenvolvedor fullstack.</p>
+                <p>Tecnologias: Java e Angular</p>
+                <p>Outras ferramentas: GIT, Eclipse e Splunk</p>
+                <p class="text-space-bottom">Cliente: Itaú</p>
+
+                <p>Atuação como desenvolvedor fullstack (Java / Angular) no desenvolvimento da nova plataforma de investimentos do Andbank.</p>
+                <p>Tecnologias: Java 11 + Spring Boot 2, Angular 8 (migrado para 9) + NgRx, PostgreSQL e Google Cloud Plataform.</p>
+                <p>Outras ferramentas: GIT</p>
+                <p>Cliente: Andbank</p>
+              </div>
+            </div>
+            <div class="experience">
+              <div class="company">
+                <img src="img/gft.jpg" alt="gft logo" class="icon-company">
+              </div>
+              <div class="description">
+                <h3><strong>Project Developer</strong></h3>
+                <p>Grupo GFT</p>
+                <p class="date-local">jan. de 2019 – set. de 2019 - 9 meses</p>
+                <p class="date-local text-space-bottom">São Paulo e Região, Brasil</p>
+
+                <p>Atuação como desenvolvedor fullstack (.NET / Angular) em projetos de automação.</p>
+                <p>Tecnologias: .NET Framework 4.5 e Angular 7</p>
+                <p>Outras ferramentas: Splunk, Git e RTC</p>
+                <p>Cliente: Itaú BBA</p>
+              </div>
+            </div>
+            <div class="experience">
+              <div class="company">
+                <img src="img/quintess.jpg" alt="quintess logo" class="icon-company">
+              </div>
+              <div class="description">
+                <h3><strong>Quintess</strong></h3>
+                <p>1 ano 3 meses</p>
+
+                <p><strong>Analista de Sistemas I</strong></p>
+                <p class="date-local">mai. de 2018 – jan. de 2019 - 9 meses</p>
+                <p class="date-local text-space-bottom">São Paulo</p>
+
+                <p>Atuação como desenvolvedor Java em projeto de cotação de seguros.</p>
+                <p>Tecnologias: Java 7, JSP, Oracle DB, Ajax e JQuery.</p>
+                <p>Outras ferramentas: Git</p>
+                <p class="text-space-bottom">Cliente: Tókio Marine</p>
+
+                <p>Atuação como desenvolvedor fullstack (.NET Core / Angular) em projeto do segmento financeiro.</p>
+                <p>Tecnologias: .NET, TSQL</p>
+                <p>Outras ferramentas: Git, SQLServer, Visual Studio</p>
+                <p class="text-space-bottom">Cliente: Red Asset</p>
+
+                <p><strong>Estagiário</strong></p>
+                <p class="date-local">nov. de 2017 – mai. de 2018 - 7 meses</p>
+                <p class="date-local text-space-bottom">São Paulo</p>
+
+                <p>Atuação como desenvolvedor Java.
+                <p>Tecnologias: Java 7, JSF e Oracle DB.</p>
+                <p>Outras ferramentas: Git</p>
+                <p>Cliente: Odontoprev</p>
+                </p>
+              </div>
+            </div>
         </h3>
       </div>
       <div class="technologies">
@@ -60,10 +131,10 @@
           <img src="img/technologies.png" alt="projetos" class="icon-aligned">
         </h3>
         <div class="technologies-logos">
-          <img src="img/java.png" alt="instagram link" class="logo">
-          <img src="img/angular.png" alt="instagram link" class="logo">
-          <img src="img/aws.png" alt="instagram link" class="logo">
-          <img src="img/net_core.png" alt="instagram link" class="logo">
+          <img src="img/java.png" alt="java logo" class="logo">
+          <img src="img/angular.png" alt="angular logo" class="logo">
+          <img src="img/aws.png" alt="aws logo" class="logo">
+          <img src="img/net_core.png" alt="net core logo" class="logo">
         </div>
       </div>
     </div>
