adicao contador de visitas oculto

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
       </div>
     </div>
     <div class="about-me">
-      <h2 class="welcome">seja bem vindo ;)</h2>
       <div class="projects">
         <h3 class="icon-text">
           projetos
@@ -62,14 +61,16 @@
 
                 <p class="date-local">set. de 2019 – o momento</p>
                 <p class="date-local text-space-bottom">São Paulo e Região, Brasil</p>
-                
+
                 <p>Atuação como desenvolvedor fullstack.</p>
                 <p>Tecnologias: Java e Angular</p>
                 <p>Outras ferramentas: GIT, Eclipse e Splunk</p>
                 <p class="text-space-bottom">Cliente: Itaú</p>
 
-                <p>Atuação como desenvolvedor fullstack (Java / Angular) no desenvolvimento da nova plataforma de investimentos do Andbank.</p>
-                <p>Tecnologias: Java 11 + Spring Boot 2, Angular 8 (migrado para 9) + NgRx, PostgreSQL e Google Cloud Plataform.</p>
+                <p>Atuação como desenvolvedor fullstack (Java / Angular) no desenvolvimento da nova plataforma de
+                  investimentos do Andbank.</p>
+                <p>Tecnologias: Java 11 + Spring Boot 2, Angular 8 (migrado para 9) + NgRx, PostgreSQL e Google Cloud
+                  Plataform.</p>
                 <p>Outras ferramentas: GIT</p>
                 <p>Cliente: Andbank</p>
               </div>
@@ -138,6 +139,9 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="visitor-counter">
+    <img src="https://profile-counter.glitch.me/hennriq/count.svg" alt="contador visitas">
   </div>
 </body>
 
