chore: atualizacao historico profissional

--- a/index.html
+++ b/index.html
@@ -53,13 +53,29 @@
           <div class="professional">
             <div class="experience">
               <div class="company">
+                <img src="img/itau.png" alt="itaú logo" class="icon-company">
+              </div>
+              <div class="description">
+                <h3><strong>Analista de Engenharia Sênior</strong></h3>
+                <p>Itaú Unibanco</p>
+
+                <p class="date-local">fev. de 2022 – o momento</p>
+                <p class="date-local text-space-bottom">São Paulo e Região, Brasil</p>
+
+                <p>Atuação como desenvolvedor fullstack.</p>
+                <p>Tecnologias: Java 8, Angular 8 e AWS.</p>
+                <p>Outras ferramentas: GIT, Eclipse e Splunk</p>
+              </div>
+            </div>
+            <div class="experience">
+              <div class="company">
                 <img src="img/brq.jpg" alt="brq logo" class="icon-company">
               </div>
               <div class="description">
                 <h3><strong>Analista de Sistemas Sênior</strong></h3>
                 <p>BRQ Digital Solutions</p>
 
-                <p class="date-local">set. de 2019 – o momento</p>
+                <p class="date-local">set. de 2019 – jan. de 2022 - 2 anos e 5 meses</p>
                 <p class="date-local text-space-bottom">São Paulo e Região, Brasil</p>
 
                 <p>Atuação como desenvolvedor fullstack.</p>
