feat: adição whatsapp link

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <a href="https://www.instagram.com/hennriq" target="_blank">
             <img src="img/instagram.png" alt="instagram link" class="icon-link">
           </a>
+          <a href="https://wa.me/+5511987380875" target="_blank">
+            <img src="img/whatsapp.png" alt="instagram link" class="icon-link">
+          </a>
         </div>
       </div>
     </div>
